2021-XX-XX   2.0.2:
-------------------
  * add tests


2021-04-19   2.0.1:
-------------------
  * update documentation
  * improve some error messages


2021-04-14   2.0.0:
-------------------
  * require more specific objects, int (0 or 1) or bool, see #119
  * items are always returned as int 0 or 1, #119
  * remove `.length()` method (deprecated since 1.5.1 - use `len()`)
  * in `.unpack()` the `one` argument now defaults to 0x01 (was 0xff)
  * `.tolist()` now always returns a list of integers (0 or 1)
  * fix frozenbitarray hash function, see #121
  * fix frozenbitarray being mutable by `<<=` and `>>=`
  * support sequence protocol in `.extend()` (and bitarray creation)
  * improve OverflowError messages from `util.int2ba()`
  * add [hexadecimal example](../examples/hexadecimal.py)


2021-04-10   1.9.2:
-------------------
  * update pythoncapi_compat: Fix support with PyPy 3.7, #120
  * update readme


2021-04-05   1.9.1:
-------------------
  * switch documentation from markdown to reStructuredText
  * add tests


2021-04-03   1.9.0:
-------------------
  * add shift operations (`<<`, `>>`, `<<=`, `>>=`), see #117
  * add `bitarray.util.ba2base()` and `bitarray.util.base2ba()`,
    see last paragraph in [Bitarray representations](represent.rst)
  * documentation and tests


2021-03-31   1.8.2:
-------------------
  * fix crash caused by unsupported types in binary operations, #116
  * speedup initializing or extending a bitarray from another with different
    bit endianness
  * add formatting options to `bitarray.util.pprint()`
  * add documentation on [bitarray representations](represent.rst)
  * add and improve tests (all 291 tests run in less than half a second on
    a modern machine)


2021-03-25   1.8.1:
-------------------
  * moved implementation of and `hex2ba()` and `ba2hex()` to C-level
  * add `bitarray.util.parity()`


2021-03-21   1.8.0:
-------------------
  * add `bitarray.util.serialize()` and `bitarray.util.deserialize()`