@@ -1,5 +1,6 @@
 2021-XX-XX   2.0.2:
 -------------------
+  * improve encode/decode error messages
   * add tests
 
 
